--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,26 @@
 ---
+import MainLayout from '../layouts/MainLayout.astro';
 
+// Server Only
+const name = 'Fernando Alberto Herrera Jiménez';
+const title = 'Home Page';
+
+const currentDate = new Date();
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Hola mundo</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<MainLayout title="Home Page">
+  <h1>{name}</h1>
+
+  <p>Momento actual: {currentDate.toLocaleTimeString()}</p>
+  <p id="current-time">Momento actual real:</p>
+
+  <script>
+    // Client Only
+
+    const currentTimeParagraph = document.querySelector(
+      '#current-time'
+    ) as HTMLParagraphElement;
+
+    currentTimeParagraph.innerText = `Momento actual real: ${new Date().toLocaleTimeString()}`;
+  </script>
+</MainLayout>
