--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,5 +1,6 @@
 ---
 
+import { ClientRouter,fade } from 'astro:transitions';
 import Navbar from '../components/Navbar.astro';
 
 import '../styles/global.css';
@@ -18,12 +19,14 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
-
+     <ClientRouter /> 
+    
     <!-- <link rel="stylesheet" href="styles/global.css" /> -->
 
    
   </head>
-  <body>
+  <body >
+    
     <Navbar />
 
     <main>
