--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -4,9 +4,9 @@ const navTitle = "Navigation";
 
 	<span>{navTitle}</span>	
 	<nav>
-			<a href="/">Home</a>
-			<a href="/about">About</a>
-			<a href="/contact">Contact</a>
+			<a href="/01_astro_foundation/">Home</a>
+			<a href="/01_astro_foundation/about">About</a>
+			<a href="/01_astro_foundation/contact">Contact</a>
 	</nav>
 
 
